--- a/main.tex
+++ b/main.tex
@@ -171,60 +171,51 @@ depuis le Brésil, la Turquie et plusieurs pays européens.\\
 
 \section{Retour des échanges avec les concessionnaires}
 
-\paragraph{} Nous avons pu interroger deux conseillers commerciaux des
-concessionnaires Peugeot et Renault, le premier étant partenaire de Citroën dans
-le groupe PSA, et le second un concurrent de la marque.
+\paragraph{} Nous avons pu interroger deux conseillers commerciaux de
+concessions Peugeot et Renault, le premier étant partenaire de Citroën au
+sein du groupe PSA, et le second un concurrent de la marque.
 
-\paragraph{} Le conseiller de Renault nous a donné un avis plutôt négatif
-concernant la C4 Cactus. Il travaille à Renault, mais ne se considère pas comme
-fidèle à Renault, ce qui nous a permis d'avoir un avis plutôt subjectif de la
-part d'un homme ayant certainement la vingtaine. Il n'est pas du tout satisfait
-du design de la C4 Cactus, trouvant les air-bumps disgracieux et pas efficaces.
-En effet cette personne a travaillé dans la production des voitures avant de
-s'engager dans le commercial et a vu beaucoup de Citroën C4 Cactus revenir au
-garage à cause des air-bumps car lorsque ceux-ci sont abîmés et doivent être
-changés, il faut changer les deux portes étant reliées à l'air-bump cassé et
-tout le plastique autour, ce qui demande beaucoup de temps et de main d'œuvre.
-De plus, de son point de vue, la partie avant de la voiture ressemble trop à
-celle d'un $4 \times 4$, elle est trop imposante ce qui ne correspond pas à ce que
-produit Citroën habituellement.
+\paragraph{} Le conseiller de Renault, âgé d'une vingtaine d'années et ne se voyant
+pas comme un client fidèle de Renault, a dressé un portrait négatif de la
+C4 Cactus. Il n'est pas du tout satisfait du design de ce modèle, trouvant les
+air-bumps disgracieux et peu efficaces.
+Il nous a confié avoir travaillé dans la production automobile, et avoir vu
+beaucoup de C4 Cactus revenir au garage à cause des air-bumps, qui lorsqu'ils
+sont endommagés nécessitent de changer les deux portes que le coussin relie
+ainsi que le plastique autour d'elles, ce qui demande beaucoup de temps et de main d'œuvre.
+D'après lui, la partie avant du véhicule ressemble à celle d'un $4 \times 4$,
+ce qui la rend trop imposante et ne correspond pas aux habitudes de la marque Citroën.
 
 \paragraph{} En ce qui concerne la marque DS, son avis est totalement
-différent. Pour lui, le design des voitures de la marque est très beau
-esthétiquement et la nouvelle marque a eu la bonne idée de se séparer de
-Citroën. Cependant, les prix affichés par DS sont trop élevés pour prétendre
-atteindre des ventes aussi importantes que ses concurrents.
+différent. Pour lui, le design des voitures de la marque est très réussi,
+et il apprécie la décision de la nouvelle marque de se séparer de
+Citroën. Cependant, les prix affichés par DS lui semblent trop élevés pour prétendre
+atteindre des ventes aussi importantes que celles de ses concurrents.
 
-\paragraph{} Le conseiller commercial de Peugeot que nous avons interrogé a lui
-aussi un avis très négatif sur la C4 Cactus. Le design de cette voiture est
-beaucoup trop décalée par rapport à ce que fabrique généralement la marque. La
-technologie air-bump, notamment, n'est pas du tout du goût de conseiller qui ne
-la trouve absolument pas exceptionnelle malgré tout le bourrage médiatique fait
-par la marque autour de celle-ci.
+\paragraph{} L'employé de Peugeot a également une mauvaise opinion du modèle Cactus.
+Selon lui, le design de cette voiture est en décalage avec le style Citroën. La
+technologie air-bump ne lui paraît pas révolutionnaire, et il se dit étonné
+de la promotion faite par Citroën de ce procédé.
 
-\paragraph{} Pour ce qui est de la marque DS, elle a fabriqué de très bons
-produits comme la DS3 et la DS4, mais celui-ci se rapproche beaucoup trop de la
-Citroën C4: si on ne regarde pas les phares, les deux voitures sont identiques.
-Pour lui, la marque DS a plusieurs gros problèmes: le premier est que les
+\paragraph{} Quant à la ligne DS, le conseiller reconnaît qu'elle a produit de très bons
+produits tels que la DS3 et la DS4, mais la DS4 lui paraît trop proche de la Citroën
+C4 : en dehors des phares, les deux voitures seraient identiques.
+Pour lui, la marque DS souffre de plusieurs problèmes : le premier est que les
 premières DS et notamment les plus médiatisées DS3 et DS4 ont été vendues par
-Citroën, et non par DS. Le deuxième problème de la marque est sa politique de
-prix: elle fournit des voitures à prix élevés de l'ordre de ceux des véhicules
-produits par Audi ou BMW, mais pas de la même qualité.
+Citroën, et non par DS. Le deuxième est sa politique de prix : elle fournit des
+voitures à prix élevés de l'ordre de ceux des véhicules produits par Audi ou BMW,
+mais pas de la même qualité.
 
-\paragraph{} De plus, Citroën a voulu aller trop vite car à l'origine, la
-marque produisait des voitures qui n'étaient pas adaptées au public des jeunes
-personnes.  Elle ne produit pas non plus de voitures de luxe, et n'était pas
-assez reconnue pour avoir l'effet escompté sur le grand public. Elle a voulu
-être en avance sur son temps, mais s'est essoufflée. Par exemple, pour la
-Peugeot 3008, les ingénieurs de la marque ont conçus cette voiture en 2009,
-mais la voiture n'a été fabriquée que 4 ans plus tard. Ils ont eu la présence
-d'esprit d'avoir anticipé le futur besoin des gens en avance de 4 ans et de la
-commercialiser au bon moment.
+\paragraph{} De plus, Citroën aurait voulu aller trop vite car la marque ne serait
+reconnue ni comme un constructeur de voiture de luxe, ni comme une marque adaptée
+à un public jeune. Elle aurait voulu en avance sur son temps, mais se serait essoufflée.
+Le conseiller prend pour exemple la Peugeot 3008, qui aurait été conçue quatre ans
+avant sa commercialisation ; Peugeot aurait ainsi anticipé les besoins futurs du public
+et attendu sa maturité pour proposer son modèle.
 
-\paragraph{} Enfin, le dernier problème de DS se situe dans ses garages: ils
-n'ont pas misé leurs efforts sur la qualité, ce qui n'est pas respectueux de
-la part d'un constructeur de voitures de luxe dont les prix sont de l'ordre de
-50 000 voire 70 000 €.
+\paragraph{} Enfin, le dernier problème de DS se situerait dans ses garages :
+ceux-ci ne seraient pas reconnus pour leur qualité, malgré le positionnement
+luxe donné par PSA à la marque DS.
 
 \section{État des ventes de la Cactus et de DS, publics concernés}
 
