Pas encore fini

--- a/main.tex
+++ b/main.tex
@@ -89,14 +89,14 @@ pourront connaître ces deux marques, l'une en pleine redéfinition, l'autre à 
 d'une concurrence solidement ancrée dans les habitudes du public ?
 
 \paragraph{} Notre enquête nous a tout d'abord amenés à discuter avec des professionnels,
-et notamment de conseillers commerciaux de marques concurrentes. Nous avons ensuite
+et notamment des conseillers commerciaux de marques concurrentes. Nous avons ensuite
 réalisé un sondage de plus grande ampleur auprès des clients potentiels des deux marques.
 
 \paragraph{} Ce dernier a rassemblé plus de cent cinquante réponses, au sein de publics
 différents tels que le monde étudiant ou les communautés d'automobilistes. Il nous a
 permis de recueillir de nombreux commentaires sur le modèle Cactus, sur les plans fonctionnel
 et esthétique. Nous avons également obtenu l'opinion du public sur la marque DS, désormais
-indépendante, afin de de connaître le positionnement qu'il lui donne sur le
+indépendante, afin de connaître le positionnement qu'il lui donne sur le
 marché haut de gamme.
 
 \break
@@ -106,7 +106,7 @@ marché haut de gamme.
 plusieurs bouleversements. Depuis le rachat de Citroën par Michelin en 1976, le
 groupe doit relever le défi de faire cohabiter deux marques concurrentes. Si la
 distinction claire entre les clients Citroën et Peugeot, creusée depuis les
-années 1950, semblait être un avantage, le groupe parvint difficilement à
+années 1950, semblait être un avantage, le groupe parvient difficilement à
 concilier les différences de culture et d'approche des deux constructeurs. Peu
 à peu, il s'éloigne du marché haut de gamme, duquel Citroën était pourtant
 proche.
@@ -151,7 +151,7 @@ de ces employés.
 \paragraph{} Afin de recueillir le sentiment du public, nous avons enrichi notre
 questionnaire en vue d'une publication sous forme de sondage en ligne. Il était
 important d'y ajouter des éléments de contexte ainsi que des illustrations, afin que
-les internautes moins familiers des gammes Citroën et DS puissent également nous donner
+les internautes moins renseignés sur les gammes Citroën et DS puissent également nous donner
 leur opinion. Le sondage a été partagé sur les réseaux sociaux auprès des communautés Citroën,
 puis auprès d'un large panel d'étudiants qui représentent le public futur des deux marques.
 
@@ -206,9 +206,9 @@ Citroën, et non par DS. Le deuxième est sa politique de prix : elle fournit de
 voitures à prix élevés de l'ordre de ceux des véhicules produits par Audi ou BMW,
 mais pas de la même qualité.
 
-\paragraph{} De plus, Citroën aurait voulu aller trop vite car la marque ne serait
+\paragraph{} De plus, le conseiller accuse Citroën d'avoir voulu aller trop vite ; la marque ne serait
 reconnue ni comme un constructeur de voiture de luxe, ni comme une marque adaptée
-à un public jeune. Elle aurait voulu en avance sur son temps, mais se serait essoufflée.
+à un public jeune. Elle se voudrait en avance sur son temps, mais se serait essoufflée.
 Le conseiller prend pour exemple la Peugeot 3008, qui aurait été conçue quatre ans
 avant sa commercialisation ; Peugeot aurait ainsi anticipé les besoins futurs du public
 et attendu sa maturité pour proposer son modèle.
@@ -221,40 +221,38 @@ luxe donné par PSA à la marque DS.
 
 \subsection{Citroën C4 Cactus}
 
-\paragraph{} Avec sa mise en vente en 2014, la C4 Cactus connaît un début
-discret en termes de vente mais a réussi tout de même à enregistrer 75 000
+\paragraph{} Après sa mise en vente en 2014, la C4 Cactus connaît un début
+discret mais réussit tout de même à enregistrer 75 000
 ventes au bout d'un an ainsi que 35 distinctions à travers le
-monde\cite{communique}, mais seulement 27\% ont été vendues en France. Les
-Français sont beaucoup moins attirés par ce modèle, car le modèle n'a pas été
-commandé plus de 20 000 fois depuis son lancement en Juin 2014 et a été vendus
-en seulement 6 000 exemplaires en cette année 2015. Il faut aussi prendre en
-compte le fait que les agents de la marque en ont presque tous une par
-obligation et les concessionnaires en ont en stock donc ces chiffres ne sont
-pas tout à fait révélateurs du nombre de clients qui en ont acheté une. De
-plus, le modèle ne pointe qu'à la 22\ieme{} place des voitures les plus vendues
-en France depuis le début de l'année 2015.
+monde\cite{communique}. Parmi ces véhicules, seuls 27\% ont été vendus en France.
+Les Français sont beaucoup moins attirés par ce modèle, qui n'a pas été
+commandé plus de 20 000 fois depuis son lancement en juin 2014 et a été vendu
+à seulement 6 000 exemplaires en cette année 2015. Il faut également confronter à
+ces chiffres les modèles confiés par Citroën à ses agents, et les stocks des
+concessionnaires. La C4 Cactus parvient finalement à la 22\ieme{} place des voitures
+les plus vendues en France depuis le début de l'année 2015.
 
-\paragraph{} Ce modèle allie confort et technologie utile et vise un public
-cherchant plus un voiture utile qu'un voiture permettant d'affirmer son statut
-social. En termes de prix, la Citroën Cactus se positionne entre voitures ``low
-cost'' et voitures haut de gamme. En effet, son prix peut varier entre 15 200 €
-et 22 900 € à neuf selon la finition et le moteur pris\cite{banquette}.
+\paragraph{} Ce modèle allie confort et technologie utile, et vise un public
+préférant une voiture utile à un produit permettant d'affirmer son statut
+social. En termes de prix, la Citroën Cactus se positionne entre les lignes ``low
+cost'' et haut de gamme. En effet, son prix peut varier entre 15 200 €
+et 22 900 € à neuf selon la finition et le moteur choisi\cite{banquette}.
 
 \subsection{Ligne DS}
 
-\paragraph{} La marque DS s'est véritablement lancée avec la DS3 en 2010 qui a
+\paragraph{} La marque DS a connu son véritable lancement avec la DS3 en 2010 qui a
 été vendue en 26 417 exemplaires cette même année, 33 015 l'année suivante,
-puis les ventes ont diminué avec 25 107 ventes en 2012 et 19 672 et 17 471
-respectivement en 2013 et 2014. Ce modèle a plu à de nombreux clients de part
+puis les ventes ont diminué avec 25 107 ventes en 2012 et enfin 19 672 et 17 471
+respectivement en 2013 et 2014. Ce modèle a plu à de nombreux clients de par
 son design novateur\cite{avis}, son comportement routier exceptionnel, son
 confort mais aussi son intérieur original et moderne. Les finitions sont
 satisfaisantes, la voiture est très personnalisable, a une bonne habitabilité à
-l'arrière et n'est pas très chère par rapport à ce que fait déjà Citroën,
-puisqu'ils s'articulent autour de 20 000 € pour les modèles les plus chers.
+l'arrière et n'est pas très chère par rapport à ce que propose déjà Citroën,
+puisque ces modèles s'articulent autour de 20 000 € pour les plus chers d'entre eux.
 
-\paragraph{} En revanche, elle a quelques défauts comme l'équipement qui n'est
-pas très développé, la partie plastique qui n'est pas d'une grande qualités et
-des bruits parasites viennent de temps en temps agacer le conducteur. Le
+\paragraph{} En revanche, les clients lui reprochent quelques défauts comme un équipement
+peu développé, la partie plastique qui n'est pas d'une grande qualité, et
+des bruits parasites venant de temps en temps agacer le conducteur. Le
 dernier point noir de ce modèle se situe au niveau des vitres arrières qui ne
 peuvent pas s'ouvrir. La DS4 vient s'ajouter au marché en 2011, soit un an après
 la sortie de son aînée et elle ne suscite pas autant d'admiration chez les
@@ -263,17 +261,16 @@ de la première année, pour atteindre le pic de ventes l'année d'après avec 1
 143 modèles vendus et retomber à 11 740 et 8 661 ventes en 2013 et 2014.
 
 \paragraph{} La DS5 fait même moins de ventes que la DS4 puisque le nombre
-maximum de voitures vendues sur une année est de 10 943 et concerne l'année de
-sa sortie. Les deux année suivantes sont très mauvaises, pour ne pas dire
-catastrophiques car les ventes tombent à 8 365 en 2013 et 5 614 en 2014. En
-effet les défauts de la DS3 ne sont pas résolus sauf en ce qui concerne
-l'équipement de la voiture. Le confort global est lui beaucoup moins bon sur la
-DS4 et la DS5 que sur la DS3.
+maximum de voitures vendues sur une année est de 10 943, et concerne l'année de
+sa sortie. Les deux années suivantes sont très mauvaises, les ventes tombant
+à 8 365 en 2013 et 5 614 en 2014. En effet les défauts de la DS3 ne sont pas résolus,
+à l'exception de l'équipement de la voiture. Le confort global est lui beaucoup
+moins apprécié sur les DS4 et DS5 que sur la DS3.
 
 \paragraph{} Cette nouvelle marque se distingue beaucoup de Citroën dans son
-design, son luxe mais aussi son prix. Elle ne touche plus le citoyen lambda,
+design, son luxe mais aussi son prix. Elle ne touche plus le très grand public,
 mais se rapproche plus des marques allemandes telles que Audi et BMW. Elle
-touche donc plus les jeunes, qui sont attirés par son style, son design, ses
+plaît également aux jeunes, qui sont attirés par son style, son design, ses
 couleurs.
 
 \break
@@ -290,9 +287,9 @@ couleurs.
 
 
 \end{knitrout}
-\paragraph{} Du fait que nous ayons envoyé notre sondage français sur les
-réseaux sociaux, nous avons récolté la plupart de nos réponses de la part des
-jeunes dont la tranche d'âge est de 15-30 ans.
+\paragraph{} Notre sondage en français ayant été partagé sur les
+réseaux sociaux, et notamment au sein de groupes étudiants, la plupart de nos
+réponses vient d'un public jeune (15-30 ans).
 
 \begin{knitrout}
 \definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{figure}[H]
@@ -302,10 +299,10 @@ jeunes dont la tranche d'âge est de 15-30 ans.
 
 \end{knitrout}
 
-\paragraph{} En ce qui concerne notre sondage anglais, que nous avons posté sur
-la page Facebook anglaise de Citroën, les résultats sont beaucoup plus diverses
-et concerne surtout plus les personnes plus âgées, de plus de 40 ans. Elles
-représentent 79\% des personnes ayant répondu à cette enquête.
+\paragraph{} Les tranches d'âges des personnes ayant répondu à notre sondage
+en langue anglaise sont beaucoup plus réparties, même si la tendance est aux
+individus de plus de 40 ans. Ceux-ci représentent 79\% des personnes ayant
+répondu à cette enquête.
 
 \begin{knitrout}
 \definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{figure}[H]
