--- a/main.tex
+++ b/main.tex
@@ -304,26 +304,24 @@ en langue anglaise sont beaucoup plus réparties, même si la tendance est aux
 individus de plus de 40 ans. Ceux-ci représentent 79\% des personnes ayant
 répondu à cette enquête.
 
-\begin{knitrout}
-\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{figure}[H]
-\includegraphics[width=\maxwidth]{figure/sexe_fr-1} \caption[Sexe des personnes ayant répondu au sondage français]{Sexe des personnes ayant répondu au sondage français}\label{fig:sexe fr}
-\end{figure}
+%\begin{knitrout}
+%\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{figure}[H]
+%\includegraphics[width=\maxwidth]{figure/sexe_fr-1} \caption[Sexe des personnes ayant répondu au sondage français]{Sexe des personnes ayant répondu au sondage français}\label{fig:sexe fr}
+%\end{figure}
+%
+%
+%\end{knitrout}
+%
+%\begin{knitrout}
+%\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{figure}[H]
+%\includegraphics[width=\maxwidth]{figure/sexe_en-1} \caption[Sexe des personnes ayant répondu au sondage anglais]{Sexe des personnes ayant répondu au sondage anglais}\label{fig:sexe en}
+%\end{figure}
+%
+%
+%\end{knitrout}
 
-
-\end{knitrout}
-
-\begin{knitrout}
-\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{figure}[H]
-\includegraphics[width=\maxwidth]{figure/sexe_en-1} \caption[Sexe des personnes ayant répondu au sondage anglais]{Sexe des personnes ayant répondu au sondage anglais}\label{fig:sexe en}
-\end{figure}
-
-
-\end{knitrout}
-
-\paragraph{} Parmi toutes les personnes ayant répondu à notre sondage,
-seulement 32 sur 156 sont des femmes, soit 21\%, ce qui fait assez peu. Ceci
-montre que les femmes sont beaucoup moins intéressées par les voitures que les
-hommes, en particulier ce qui concerne celles produites par Citroën.
+\paragraph{} Parmi toutes les personnes ayant répondu à notre sondage, on peut noter
+que seules 32 sur 156 sont des femmes, soit 21\%.
 
 \break
 \section{Marketing}
@@ -336,49 +334,46 @@ hommes, en particulier ce qui concerne celles produites par Citroën.
 
 \end{knitrout}
 
-\begin{knitrout}
-\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{figure}[H]
-\includegraphics[width=\maxwidth]{figure/know_en-1} \caption[Proportion des personnes connaissant auparavant la C4 Cactus ayant répondu au sondage anglais]{Proportion des personnes connaissant auparavant la C4 Cactus ayant répondu au sondage anglais}\label{fig:know en}
-\end{figure}
+%\begin{knitrout}
+%\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{figure}[H]
+%\includegraphics[width=\maxwidth]{figure/know_en-1} \caption[Proportion des personnes connaissant auparavant la C4 Cactus ayant répondu au sondage anglais]{Proportion des personnes connaissant auparavant la C4 Cactus ayant répondu au sondage anglais}\label{fig:know en}
+%\end{figure}
+%
+%
+%\end{knitrout}
+
+\paragraph{} Si le sondage anglais, posté sur des communautés d'amateurs de voitures
+françaises, montre que tous les sondés connaissaient auparavant le modèle Cactus,
+le constat est différent en France où 15\% des personnes sondées ne le connaissent pas.
 
 
-\end{knitrout}
+%\begin{knitrout}
+%\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{figure}[H]
+%\includegraphics[width=\maxwidth]{figure/means_fr-1} \caption[Nuage de mots du moyen de prise de conscience de l'existence de la C4 Cactus des personnes ayant répondu au sondage français]{Nuage de mots du moyen de prise de conscience de l'existence de la C4 Cactus des personnes ayant répondu au sondage français}\label{fig:means fr}
+%\end{figure}
+%
+%
+%\end{knitrout}
+%
+%\begin{knitrout}
+%\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{figure}[H]
+%\includegraphics[width=\maxwidth]{figure/means_en-1} \caption[Nuage de mots du moyen de prise de conscience de l'existence de la C4 Cactus des personnes ayant répondu au sondage anglais]{Nuage de mots du moyen de prise de conscience de l'existence de la C4 Cactus des personnes ayant répondu au sondage anglais}\label{fig:means en}
+%\end{figure}
+%
+%
+%\end{knitrout}
 
-\paragraph{} Pour ce qui est de la connaissance de la C4 Cactus, les deux
-sondages donnent à peu près les mêmes résultats : les étrangers ayant répondu
-au sondage anglais connaissent tous ce modèle, tandis qu'il n'est pas connu
-unanimement en France : 15\% des personnes sondées ne le connaissent pas.
-
-
-
-\begin{knitrout}
-\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{figure}[H]
-\includegraphics[width=\maxwidth]{figure/means_fr-1} \caption[Nuage de mots du moyen de prise de conscience de l'existence de la C4 Cactus des personnes ayant répondu au sondage français]{Nuage de mots du moyen de prise de conscience de l'existence de la C4 Cactus des personnes ayant répondu au sondage français}\label{fig:means fr}
-\end{figure}
-
-
-\end{knitrout}
-
-\begin{knitrout}
-\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{figure}[H]
-\includegraphics[width=\maxwidth]{figure/means_en-1} \caption[Nuage de mots du moyen de prise de conscience de l'existence de la C4 Cactus des personnes ayant répondu au sondage anglais]{Nuage de mots du moyen de prise de conscience de l'existence de la C4 Cactus des personnes ayant répondu au sondage anglais}\label{fig:means en}
-\end{figure}
-
-
-\end{knitrout}
-
-\paragraph{} Ce nuage de point nous démontre que la majorité des gens
-connaissent la C4 Cactus grâce aux publicités, aux magasines et à Internet. En
-ce qui concerne le sondage anglais, du fait qu'il ait été publié sur un site de
-Citroën, une grande partie des personnes ont répondu qu'elles connaissent la C4
-Cactus car elles suivent l'actualité de la marque.
+\paragraph{} Les réponses à la question "Par quel moyen avez-vous entendu parler de la Cactus"
+démontrent que la majorité des individus français connaissent la C4 Cactus grâce aux publicités,
+aux magazines et à Internet. Les réponses en anglais sont issues d'un public toujours conscient des
+derniers modèles des marques françaises.
 
 \break
 \section{Apparence de la voiture}
 
 \begin{knitrout}
 \definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{figure}[H]
-\includegraphics[width=\maxwidth]{figure/design_fr-1} \caption[Nuage de mots de l'avis du design de la C4 Cactus des personnes ayant répondu au sondage français]{Nuage de mots de l'avis du design de la C4 Cactus des personnes ayant répondu au sondage français}\label{fig:design fr}
+\includegraphics[width=\maxwidth]{figure/design_fr-1} \caption[Nuage de mots de l'avis sur le design de la C4 Cactus des personnes ayant répondu au sondage français]{Nuage de mots de l'avis sur le design de la C4 Cactus des personnes ayant répondu au sondage français}\label{fig:design fr}
 \end{figure}
 
 
@@ -386,7 +381,7 @@ Cactus car elles suivent l'actualité de la marque.
 
 \begin{knitrout}
 \definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{figure}[H]
-\includegraphics[width=\maxwidth]{figure/design_en-1} \caption[Nuage de mots de l'avis du design de la C4 Cactus des personnes ayant répondu au sondage anglais]{Nuage de mots de l'avis du design de la C4 Cactus des personnes ayant répondu au sondage anglais}\label{fig:design en}
+\includegraphics[width=\maxwidth]{figure/design_en-1} \caption[Nuage de mots de l'avis sur le design de la C4 Cactus des personnes ayant répondu au sondage anglais]{Nuage de mots de l'avis sur le design de la C4 Cactus des personnes ayant répondu au sondage anglais}\label{fig:design en}
 \end{figure}
 
 
@@ -394,30 +389,30 @@ Cactus car elles suivent l'actualité de la marque.
 
 \paragraph{} Les avis sur le design de la C4 Cactus sont assez partagés chez
 les Français : on retrouve le plus souvent les termes ``très original'',
-``design'', ``esthétique'', ``beau'', mais aussi ``moche''. Les anglais sont
-eux, contre toute attente, très flatteurs vis-à-vis du modèle.
+``design'', ``esthétique'', ``beau'', mais aussi ``moche''. Les Britanniques sont
+quant à eux très flatteurs vis-à-vis du modèle.
 
 \begin{knitrout}
 \definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{figure}[H]
-\includegraphics[width=\maxwidth]{figure/interior_fr-1} \caption[Nuage de mots de l'avis de l'intérieur de la C4 Cactus des personnes ayant répondu au sondage français]{Nuage de mots de l'avis de l'intérieur de la C4 Cactus des personnes ayant répondu au sondage français}\label{fig:interior fr}
+\includegraphics[width=\maxwidth]{figure/interior_fr-1} \caption[Nuage de mots de l'avis sur l'intérieur de la C4 Cactus des personnes ayant répondu au sondage français]{Nuage de mots de l'avis sur l'intérieur de la C4 Cactus des personnes ayant répondu au sondage français}\label{fig:interior fr}
 \end{figure}
 
 
 \end{knitrout}
 
-\begin{knitrout}
-\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{figure}[H]
-\includegraphics[width=\maxwidth]{figure/interior_en-1} \caption[Nuage de mots de l'avis de l'intérieur de la C4 Cactus des personnes ayant répondu au sondage anglais]{Nuage de mots de l'avis de l'intérieur de la C4 Cactus des personnes ayant répondu au sondage anglais}\label{fig:interior en}
-\end{figure}
-
-
-\end{knitrout}
+%\begin{knitrout}
+%\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{figure}[H]
+%\includegraphics[width=\maxwidth]{figure/interior_en-1} \caption[Nuage de mots de l'avis de l'intérieur de la C4 Cactus des personnes ayant répondu au sondage anglais]{Nuage de mots de l'avis de l'intérieur de la C4 Cactus des personnes ayant répondu au sondage anglais}\label{fig:interior en}
+%\end{figure}
+%
+%
+%\end{knitrout}
 
 \paragraph{} Concernant l'intérieur de la voiture, les termes ``bien'',
-``bonne'', mais aussi ``simple'', ``great'', ``like'' reviennent très souvent,
+``bonne'', mais aussi ``simple'', ``great'', ``like'' reviennent très souvent, ce
 qui montre que l'intérieur du modèle est très apprécié par les clients, non
 seulement les loyaux anglais, mais aussi plusieurs français dont l'attrait pour
-la voiture n'est pas unanime.
+la voiture n'est pourtant pas unanime.
 
 \break
 \section{Opinion générale}
@@ -440,14 +435,14 @@ la voiture n'est pas unanime.
 
 \end{knitrout}
 
-\paragraph{} Les français sont aussi très partagés dans les qualités et défauts
+\paragraph{} Les Français sont aussi très partagés dans les qualités et défauts
 de la C4 Cactus. Plus de 20 personnes ont répondu que son originalité, son
 design extérieur, la simplicité de son intérieur et de ses fonctionnalités, et
 ses coussins ``airbump'' constituent ses qualités, alors que 24 personnes
-pensent que son design extérieur, comprenant les airbumps, constitue son
+pensent que son design extérieur est son
 principal défaut. L'incertitude sur le public visé et le décalage avec l'esprit
-Citroën constituent les deux autres principaux défauts remarqués par les
-français.
+Citroën sont les deux autres principaux défauts remarqués par les
+Français.
 
 \begin{knitrout}
 \definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{figure}[H]
@@ -465,7 +460,7 @@ français.
 
 \end{knitrout}
 
-\paragraph{} Pour les étrangers actifs sur la page Facebook de Citroën, la
+\paragraph{} Pour les sondés à l'étranger, la
 Citroën a plusieurs qualités qui sont son originalité, son design, son
 comportement routier, la simplicité de son intérieur et de ses fonctionnalités
 mais aussi ses airbumps. Cependant, 5 personnes trouvent que le public visé par
@@ -480,24 +475,66 @@ fonctionnalités est trop faible.
 
 \end{knitrout}
 
-\begin{knitrout}
-\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{figure}[H]
-\includegraphics[width=\maxwidth]{figure/buy_en-1} \caption[Proportion des personnes ayant répondu au sondage anglais et envisageant l'achat d'une C4 Cactus]{Proportion des personnes ayant répondu au sondage anglais et envisageant l'achat d'une C4 Cactus}\label{fig:buy en}
-\end{figure}
+%\begin{knitrout}
+%\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{figure}[H]
+%\includegraphics[width=\maxwidth]{figure/buy_en-1} \caption[Proportion des personnes ayant répondu au sondage anglais et envisageant l'achat d'une C4 Cactus]{Proportion des personnes ayant répondu au sondage anglais et envisageant l'achat d'une C4 Cactus}\label{fig:buy en}
+%\end{figure}
+%
+%
+%\end{knitrout}
 
-
-\end{knitrout}
-
-\paragraph{} Pour finir avec la Citroën C4 Cactus, un quart des Français
-interrogés achèteraient ce modèle s'ils devaient acheter une automobile, alors
-que 94\% des étrangers sondés feraient aussi ce choix.
+\paragraph{} Pour conclure, un quart des Français
+interrogés envisageraient d'acheter une C4 Cactus s'ils devaient acheter une automobile, alors
+que 94\% des étrangers sondés feraient ce choix. Ce dernier chiffre est à confronter
+au public ayant répondu à cette question, fidèle aux marques françaises et notamment à Citroën.
 
 \break
 \section{La marque DS}
 
 \begin{knitrout}
 \definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{figure}[H]
-\includegraphics[width=\maxwidth]{figure/ds_know_fr-1} \caption[Proportion des personnes ayant répondu au sondage français et sachant que DS est une marque indépendante]{Proportion des personnes ayant répondu au sondage français et sachant que DS est une marque indépendante}\label{fig:ds know fr}
+\includegraphics[width=\maxwidth]{figure/ds_know_fr-1} \caption[Proportion des personnes ayant répondu au sondage français et conscients de l'indépendance de DS]{Proportion des personnes ayant répondu au sondage français et conscients de l'indépendance de DS}\label{fig:ds know fr}
+\end{figure}
+
+
+\end{knitrout}
+
+%\begin{knitrout}
+%\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{figure}[H]
+%\includegraphics[width=\maxwidth]{figure/ds_know_en-1} \caption[Proportion des personnes ayant répondu au sondage anglais sachant que DS est une marque indépendante]{Proportion des personnes ayant répondu au sondage anglais et sachant que DS est une marque indépendante}\label{fig:ds know en}
+%\end{figure}
+%
+%
+%\end{knitrout}
+
+\paragraph{} La part des Français conscients de l'indépendance de DS est
+très similaire à celle des étrangers : 57 et 62\% respectivement. La divorce des
+deux marques, voulu par PSA, n'est donc pas encore une évidence pour le public.
+
+\begin{knitrout}
+\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{figure}[H]
+\includegraphics[width=\maxwidth]{figure/brand_fr-1} \caption[Nuage de mots de l'avis sur la marque DS des personnes ayant répondu au sondage français]{Nuage de mots de l'avis sur la marque DS des personnes ayant répondu au sondage français}\label{fig:brand fr}
+\end{figure}
+
+
+\end{knitrout}
+
+%\begin{knitrout}
+%\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{figure}[H]
+%\includegraphics[width=\maxwidth]{figure/brand_en-1} \caption[Nuage de mots de l'avis sur la marque DS des personnes ayant répondu au sondage anglais]{Nuage de mots de l'avis sur la marque DS des personnes ayant répondu au sondage anglais}\label{fig:brand en}
+%\end{figure}
+%
+%
+%\end{knitrout}
+
+\paragraph{} Concernant les avis sur la marque DS, le Français et les étrangers
+sont d'accord sur un point : cette nouvelle marque incarne le luxe et un
+design novateur et réussi, à un prix toutefois élevé.
+
+\begin{knitrout}
+\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{figure}[H]
+\includegraphics[width=\maxwidth]{figure/preference_fr-1} \caption[Réponses, chez les Français, à la question "Parmi ces trois marques, laquelle a votre préférence ?"]{Réponses, chez les Français, à la question "Parmi ces trois marques, laquelle a votre préférence ?"}\label{fig:preference fr}
+
 \end{figure}
 
 
@@ -505,61 +542,21 @@ que 94\% des étrangers sondés feraient aussi ce choix.
 
 \begin{knitrout}
 \definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{figure}[H]
-\includegraphics[width=\maxwidth]{figure/ds_know_en-1} \caption[Proportion des personnes ayant répondu au sondage anglais sachant que DS est une marque indépendante]{Proportion des personnes ayant répondu au sondage anglais et sachant que DS est une marque indépendante}\label{fig:ds know en}
+\includegraphics[width=\maxwidth]{figure/preference_en-1} \caption[Réponses, chez le public étranger, à la question "Parmi ces trois marques, laquelle a votre préférence ?"]{Réponses, chez le public étranger, à la question "Parmi ces trois marques, laquelle a votre préférence ?"}\label{fig:preference en}
 \end{figure}
 
 
 \end{knitrout}
 
-\paragraph{} La part des Français sachant que DS est une marque indépendante et
-très similaire à celle des étrangers : 57 et 62\% respectivement.
-
-\begin{knitrout}
-\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{figure}[H]
-\includegraphics[width=\maxwidth]{figure/brand_fr-1} \caption[Nuage de mots de l'avis de la marque DS des personnes ayant répondu au sondage français]{Nuage de mots de l'avis de la marque DS des personnes ayant répondu au sondage français}\label{fig:brand fr}
-\end{figure}
-
-
-\end{knitrout}
-
-\begin{knitrout}
-\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{figure}[H]
-\includegraphics[width=\maxwidth]{figure/brand_en-1} \caption[Nuage de mots de l'avis de la marque DS des personnes ayant répondu au sondage anglais]{Nuage de mots de l'avis de la marque DS des personnes ayant répondu au sondage anglais}\label{fig:brand en}
-\end{figure}
-
-
-\end{knitrout}
-
-\paragraph{} Concernant les avis sur la marque DS, le français et étrangers
-sont aussi d'accord sur ce point : cette nouvelle marque incarne le luxe et un
-design novateur et beau, et est aussi très chère.
-
-\begin{knitrout}
-\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{figure}[H]
-\includegraphics[width=\maxwidth]{figure/preference_fr-1} \caption[Préférences de marque des personnes ayant répondu au sondage français]{Préférences de marque des personnes ayant répondu au sondage français}\label{fig:preference fr}
-\end{figure}
-
-
-\end{knitrout}
-
-\begin{knitrout}
-\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{figure}[H]
-\includegraphics[width=\maxwidth]{figure/preference_en-1} \caption[Préférences de marque des personnes ayant répondu au sondage anglais]{Préférences de marque des personnes ayant répondu au sondage anglais}\label{fig:preference en}
-\end{figure}
-
-
-\end{knitrout}
-
-\paragraph{} Cependant, ils n'ont pas le même regard sur la concurrence
-incarnée par Audi et BMW notamment, car si plus de la moitié des français sont
-très attirés par la première marque allemande citée, les Anglais sont eux en
-faveur de la marque française.
+\paragraph{} Cependant, les deux publics n'ont pas le même regard sur la concurrence
+incarnée notamment par Audi et BMW, car si plus de la moitié des Français est
+toujours attirée par Audi, les Britanniques sont eux en faveur de la marque française.
 
 \break
 
 \part{Conclusion}
 
-\paragraph{} Un an après son lancement, la Citroën C4 Cactus ne se hisse qu'à la 22ème place des voitures les plus vendues en France depuis le début de l’année 2015. Ce succès mitigé peut s'expliquer en France par l'originalité du véhicule, dont le design s'éloigne des sentiers battus de Citroën. Si notre enquête a révélé que ce modèle proche des SUV rassemble de nombreux amateurs, il semble qu'il soit moins adapté au public français, moins amateur de SUV et souvent rebuté par l'aspect extérieur du véhicule et de ses \textit{airbumps}. Son prix, son confort et ses fonctionnalités en font un produit davantage destiné à des acheteurs à la recherche d'un véhicule utilitaire. Si l'objectif de Citroën était de proposer aux automobilistes français un nouveau type de véhicule quotidien, la Cactus paraît plus apte à conquérir le marché européen.
+\paragraph{} Un an après son lancement, la Citroën C4 Cactus ne se hisse qu'à la 22ème place des voitures les plus vendues en France depuis le début de l’année 2015. Ce succès mitigé peut s'expliquer en France par l'originalité du véhicule, dont le design s'éloigne des sentiers battus de Citroën. Si notre enquête a révélé que ce modèle proche des SUV rassemble de nombreux amateurs, il semble qu'il soit peu adapté au public français, moins amateur de SUV et souvent rebuté par l'aspect extérieur du véhicule et de ses \textit{airbumps}. Son prix, son confort et ses fonctionnalités en font un produit davantage destiné à des acheteurs à la recherche d'un véhicule utilitaire. Si l'objectif de Citroën était de proposer aux automobilistes français un nouveau type de véhicule quotidien, la Cactus paraît plus apte à conquérir le marché européen.
 
 
 \paragraph{} La marque DS, quant à elle, s’est lancée sur le segment \textit{premium}, une gamme au dessus de la maison-mère Citroën ; un positionnement assumé par le prix et le design des véhicules. Elle veut incarner la voiture de luxe à la française et ainsi concurrencer les ténors européens Audi et BMW. Les résultats de nos sondages montrent que le jeune public français (20-30 ans) a plus d'affinités pour Audi que pour DS et BMW ; toutefois, il ne semble pas départager ces deux dernières. Ce constat permet de saluer une première réussite de DS, qui a su en quelques années s'approcher du niveau de popularité des marques \textit{premium} historiques. La marque s'offre ainsi les moyens de rivaliser avec Audi, BMW ou encore Lexus dans les années à venir, en profitant du renouvellement de leur public.
