Fini parce que bon ça va maintenant

--- a/main.tex
+++ b/main.tex
@@ -508,8 +508,9 @@ au public ayant répondu à cette question, fidèle aux marques françaises et n
 %\end{knitrout}
 
 \paragraph{} La part des Français conscients de l'indépendance de DS est
-très similaire à celle des étrangers : 57 et 62\% respectivement. La divorce des
-deux marques, voulu par PSA, n'est donc pas encore une évidence pour le public.
+très similaire à celle des étrangers : 57 et 62\% respectivement.
+
+\paragraph{} Nous avons aussi demandé aux deux publics ce qui faisait de DS une marque différente de Citroën. Une grande majorité des Français interrogés estime que c'est son positionnement haut de gamme et son style particulier qui permettent à DS de se distinguer. D'autres estiment qu'il s'agit simplement d'une différence de prix. Pour le public étranger, et notamment britannique, la distinction n'est pas évidente ; si on retrouve les commentaires du public français, la plupart des individus ne comprend pas le geste de PSA, voyant DS comme la gamme phare de Citroën et non comme une marque à part.
 
 \begin{knitrout}
 \definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{figure}[H]
